# BSDS500EvalPython

./: .gitignore  NmsAplier.py  README.md  evalModel.py  nmsMex.py  pyproject.toml
funcs/: edgesEvalDir.py  edgesEvalIm.py
pdi/: mat2png.py  nmsMex.py
