[project]
name = "bsds500evalpython"
version = "0.1.0"
description = ""
authors = [
    {name = "ayresz",email = "matheusayressantos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2,<2.3.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
